--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montaga&display=swap');
+    <style type="text/tailwindcss" >
         @theme{
-            --font-inter:"Inter",serif;
+            --font-inter:"Inter";
+            --color-sam:#1B1B1B;
         }
     </style>
     </head>
-<body class="bg-black font-(--font-inter)">
+<body class="bg-black font-[Inter ]">
     <header class="flex  m-5">
-        <div class="flex justify-center items-center rounded-full w-[60px] h-[60px] bg-gray-900 border-1 border-gray-700 ">
+        <div class="flex justify-center items-center rounded-full w-[60px] h-[60px] bg-sam border border-gray-900 ">
             <img src="./image/Mark(1).svg" alt="">
         </div>
-        <nav class="w-full flex justify-around items-center flex-1 text-white rounded-full border-1 border-gray-700  gap-[6.6rem] bg-gray-900 ">
+        <nav class="w-full flex justify-around items-center flex-1 text-white rounded-full bg-sam border border-gray-900   gap-[6.6rem] bg-gray-900 ">
             <a href="ABOUT" class="text-red-500 font-bold">ABOUT</a>
             <a href="PORTFOLIO" class="hidden md:block">PORTFOLIO</a>
             <a href="CONTACT"  class="hidden md:block">CONTACT</a>
@@ -26,7 +26,7 @@
             </div>
         </nav>
     </header>
-     <section class="m-5">
+     <section class="m-5 bg-sam border border-gray-900 rounded-[10px] ">
         <div class="m-5 w-125px h-21px text-white m-[30px] md:flex justify-between flex-row-reverse">
             <div class="flex justify-around items-center bg-gray-900 rounded-full w-55 ">
                 <img src="./image/Ellipse 65(1).svg" alt="">
@@ -59,7 +59,7 @@
     </div>
      </section>
      <div class="grid md:grid-cols-2">
-        <section class="bg-gray-900 rounded-[10px] m-14">
+        <section class=" bg-sam border border-gray-900  rounded-[10px] m-14">
             <div>
               <div class="flex gap-3 m-14">
                   <img src="./image/Ellipse 66.svg" alt="">
@@ -96,7 +96,7 @@
             </div>
       
            </section class="md:flex flex-1">
-           <section class="text-white bg-black  rounded-[10px] m-14">
+           <section class="text-white bg-black rounded-[10px] m-14">
               <div class="md:">
                 <div class="p-[2px] rounded-[10px] bg-gradient-to-bl from-orange-600 to-transparent via-transparent ">
                   <div class="w-full h-[82px] bg-gray-900 flex justify-center items-center rounded-[10px]  bg-gradient-to-bl from-orange-600 to-transparent via-transparent">
@@ -117,7 +117,7 @@
                   </div>
               </div> 
            </section>
-           <section  class="bg-gray-900 rounded-[10px]  m-14 md:mt-8">
+           <section  class=" bg-sam border border-gray-900  rounded-[10px]  m-14 md:mt-8">
               <div class="text-white">
                   <div class="flex justify-between m-14">
                       <div>
@@ -134,7 +134,7 @@
               </div>
            </section>
            <div class="md:-mt-67"> 
-              <section  class="bg-gray-900 rounded-[10px] h-[300px]  m-14 md:m-10" >
+              <section  class=" bg-sam border border-gray-900  rounded-[10px] h-[300px] m-14 md:m-10" >
                   <div class="text-white">
                       <div class=" flex justify-between m-14">
                           <div class="md:p-[10px]">
@@ -144,14 +144,14 @@
                           <div class="md:p-[10px]">
                               <img src="./image/majesticons_arrow-up-line.svg" alt="">
                           </div>
-                      </div>
-                      <div class="flex justify-center items-center ">
-                          <img class="a z-2"  src="./image/Music1.svg" alt="">
-                          <img class="z-1 ml-18 mt-10 absolute" src="./image/Music.svg" alt="">
-                      </div>
+                        </div>
+                        <div class="flex justify-center items-center ">
+                            <img class="a z-2"  src="./image/Music1.svg" alt="">
+                            <img class="z-1 ml-18 mt-10 absolute" src="./image/Music.svg" alt="">
+                        </div>
                   </div>
                </section>
-               <section  class="bg-gray-900 rounded-[10px]  m-14 md:m-10">
+               <section  class="bg-sam border border-gray-900  rounded-[10px]  m-14 md:m-10">
                   <div class="text-white">
                       <div class="flex justify-between m-14">
                           <div class="md:p-[10px]">
@@ -170,7 +170,7 @@
                </section>
            </div>
      </div>
-     <section  class=" flex flex-col bg-gray-900 rounded-[10px]  m-14 md:h-[82px]">
+     <section  class=" flex flex-col bg-sam border border-gray-900 rounded-[10px]  m-14 md:h-[82px]">
         <div class=" md:flex md:justify-evenly md:flex-row-reverse text-white">
             <div class="flex justify-center items-center">
                 <img src="./image/Ellipse 65(1).svg" alt="">
